--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-
     <div class="wrapper">
-      <img src="img/woman.jpg" id="immagine" alt="">
-      <p class="testo">Il mio profilo</p>
-      
+      <img src="img\IsaacClarke.jpg" id="immagine" alt="Immagine non trovata">
+      <p class="testo">Isaac Clarke</p>
     </div>
   </body>
 </html>
